// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Job Details should not render the config if the config is not given 1`] = `
<div>
  <div
    class="job-details"
  >
    <div
      class="row"
    >
      <div
        class="col-8"
      >
        <ul
          class="nav nav-tabs nav-fill"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/jobs/123/time-series"
            >
              Time Series
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link active"
              href="/jobs/123/config"
            >
              Config
            </a>
          </li>
        </ul>
      </div>
      <div
        class="col-4"
      >
        <h4
          class="simulation-id"
        >
          Simulation: 
          <code>
            123
          </code>
        </h4>
      </div>
    </div>
    <div
      class="job-details-content"
    />
  </div>
</div>
`;

exports[`Job Details should not render time series mean comparison tab when a job is not finished 1`] = `
<DocumentFragment>
  <div
    class="job-details"
  >
    <div
      class="row"
    >
      <div
        class="col-8"
      >
        <ul
          class="nav nav-tabs nav-fill"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/jobs/123/time-series"
            >
              Time Series
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/jobs/123/config"
            >
              Config
            </a>
          </li>
        </ul>
      </div>
      <div
        class="col-4"
      >
        <h4
          class="simulation-id"
        >
          Simulation: 
          <code>
            123
          </code>
        </h4>
      </div>
    </div>
    <div
      class="job-details-content"
    >
      <div
        class="graph-wrap"
      >
        <div
          class="graph-actions"
        >
          <p
            class="action"
          >
            Zoom: 
            <code
              class="control"
            >
              click-drag
            </code>
          </p>
          <p
            class="action"
          >
            Pan: 
            <code
              class="control"
            >
              shift-click-drag
            </code>
          </p>
          <p
            class="action"
          >
            Restore: 
            <code
              class="control"
            >
              double-click
            </code>
          </p>
          <button
            class="btn btn-sm btn-secondary"
          >
            Export graph data
          </button>
        </div>
        <div
          data-testid="visualization"
          id="vis"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Job Details should render grid if grid is enabled in config 1`] = `
<div>
  <div
    class="job-details"
  >
    <div
      class="row"
    >
      <div
        class="col-8"
      >
        <ul
          class="nav nav-tabs nav-fill"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/jobs/123/time-series"
            >
              Time Series
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link active"
              href="/jobs/123/grid"
            >
              Grid
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/jobs/123/config"
            >
              Config
            </a>
          </li>
        </ul>
      </div>
      <div
        class="col-4"
      >
        <h4
          class="simulation-id"
        >
          Simulation: 
          <code>
            123
          </code>
        </h4>
      </div>
    </div>
    <div
      class="job-details-content"
    >
      <div
        class="multi-spinners"
        data-testid="loader"
        id="loader"
      >
        <div
          class="spinner-grow text-dark"
        />
        <div
          class="spinner-grow text-dark"
        />
        <div
          class="spinner-grow text-dark"
        />
        <div
          class="spinner-grow text-dark"
        />
        <div
          class="spinner-grow text-dark"
        />
        <div
          class="spinner-grow text-dark"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Job Details should render the config if the config is given 1`] = `
<div>
  <div
    class="job-details"
  >
    <div
      class="row"
    >
      <div
        class="col-8"
      >
        <ul
          class="nav nav-tabs nav-fill"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/jobs/123/time-series"
            >
              Time Series
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link active"
              href="/jobs/123/config"
            >
              Config
            </a>
          </li>
        </ul>
      </div>
      <div
        class="col-4"
      >
        <h4
          class="simulation-id"
        >
          Simulation: 
          <code>
            123
          </code>
        </h4>
      </div>
    </div>
    <div
      class="job-details-content"
    >
      <pre>
        {
    "configKey": "configValue"
}
      </pre>
    </div>
  </div>
</div>
`;

exports[`Job Details should render the time series if the view is time-series 1`] = `
<div>
  <div
    class="job-details"
  >
    <div
      class="row"
    >
      <div
        class="col-8"
      >
        <ul
          class="nav nav-tabs nav-fill"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link active"
              href="/jobs/123/time-series"
            >
              Time Series
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/jobs/123/config"
            >
              Config
            </a>
          </li>
        </ul>
      </div>
      <div
        class="col-4"
      >
        <h4
          class="simulation-id"
        >
          Simulation: 
          <code>
            123
          </code>
        </h4>
      </div>
    </div>
    <div
      class="job-details-content"
    >
      <div
        class="graph-wrap"
      >
        <div
          class="graph-actions"
        >
          <p
            class="action"
          >
            Zoom: 
            <code
              class="control"
            >
              click-drag
            </code>
          </p>
          <p
            class="action"
          >
            Pan: 
            <code
              class="control"
            >
              shift-click-drag
            </code>
          </p>
          <p
            class="action"
          >
            Restore: 
            <code
              class="control"
            >
              double-click
            </code>
          </p>
          <button
            class="btn btn-sm btn-secondary"
            disabled=""
          >
            Export graph data
          </button>
        </div>
        <div
          data-testid="visualization"
          id="vis"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Job Details should render time series mean comparison graph tab when a job is finished 1`] = `
<DocumentFragment>
  <div
    class="job-details"
  >
    <div
      class="row"
    >
      <div
        class="col-8"
      >
        <ul
          class="nav nav-tabs nav-fill"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/jobs/123/time-series"
            >
              Time Series
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link active"
              href="/jobs/123/time-series-deviation"
            >
              Time Series Deviation
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/jobs/123/config"
            >
              Config
            </a>
          </li>
        </ul>
      </div>
      <div
        class="col-4"
      >
        <h4
          class="simulation-id"
        >
          Simulation: 
          <code>
            123
          </code>
        </h4>
      </div>
    </div>
    <div
      class="job-details-content"
    >
      <div
        class="graph-wrap"
      >
        <div
          class="graph-actions"
        >
          <p
            class="action"
          >
            Zoom: 
            <code
              class="control"
            >
              click-drag
            </code>
          </p>
          <p
            class="action"
          >
            Pan: 
            <code
              class="control"
            >
              shift-click-drag
            </code>
          </p>
          <p
            class="action"
          >
            Restore: 
            <code
              class="control"
            >
              double-click
            </code>
          </p>
          <button
            class="btn btn-sm btn-secondary"
          >
            Export graph data
          </button>
        </div>
        <div
          data-testid="visualization"
          id="vis"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Job Details should render time-series if grid is disabled in config 1`] = `
<div>
  <div
    class="job-details"
  >
    <div
      class="row"
    >
      <div
        class="col-8"
      >
        <ul
          class="nav nav-tabs nav-fill"
        >
          <li
            class="nav-item"
          >
            <a
              class="nav-link active"
              href="/jobs/123/time-series"
            >
              Time Series
            </a>
          </li>
          <li
            class="nav-item"
          >
            <a
              class="nav-link "
              href="/jobs/123/config"
            >
              Config
            </a>
          </li>
        </ul>
      </div>
      <div
        class="col-4"
      >
        <h4
          class="simulation-id"
        >
          Simulation: 
          <code>
            123
          </code>
        </h4>
      </div>
    </div>
    <div
      class="job-details-content"
    >
      <div
        class="graph-wrap"
      >
        <div
          class="graph-actions"
        >
          <p
            class="action"
          >
            Zoom: 
            <code
              class="control"
            >
              click-drag
            </code>
          </p>
          <p
            class="action"
          >
            Pan: 
            <code
              class="control"
            >
              shift-click-drag
            </code>
          </p>
          <p
            class="action"
          >
            Restore: 
            <code
              class="control"
            >
              double-click
            </code>
          </p>
          <button
            class="btn btn-sm btn-secondary"
            disabled=""
          >
            Export graph data
          </button>
        </div>
        <div
          data-testid="visualization"
          id="vis"
        />
      </div>
    </div>
  </div>
</div>
`;
